ensure overflow is hidden on parent element

--- a/war/css/circadian.css
+++ b/war/css/circadian.css
@@ -15,6 +15,8 @@ body {
 		color-stop(0.59, rgb(80,156,227)),
 		color-stop(0.8, rgb(112,188,255))
 	);
+	
+	overflow: hidden;
 }
 
 .container-fluid {
